# tricount-extractor

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: format.yml  run_tests.yml
tricount_extractor/: main.py  parse_args.py  saver.py
tricount_extractor/client/: client.py  keys.py
tricount_extractor/models/: allocation.py  amount.py  entry.py  member.py  pagination.py  registry.py
tricount_extractor/tests/: test_client.py  test_main.py
tricount_extractor/tests/data/expected_results/: attachment_test_4.xlsx  custom_category_trip_8.xlsx  dinner_group_3.xlsx  euro_trip_2.xlsx  foreign_currency_trip_6.xlsx  income_trip_7.xlsx  multi_attachment_test_5.xlsx  test_trip_1.xlsx
tricount_extractor/tests/data/responses/: basic_registries.json  no_registries.json  registries_with_reimboursement.json  registry_with_custom_category.json  registry_with_foreign_currency.json  registry_with_income.json  registry_with_multiple_attachments.json  registry_with_single_attachment.json  unequal_registries.json
