[project]
name = "tricount-extractor"
version = "0.1.0"
description = "TODO"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.3",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
]

[dependency-groups]
lint = [
    "pre-commit==4.5.1",
    "ruff==0.14.10",
]
dev = [
    "pytest==9.0.2",
]
