[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tricount-extractor"
version = "0.1.0"
description = "Extract and save Tricount registries to Excel files"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.7",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
]

[project.scripts]
tricount-extractor = "tricount_extractor.main:main"

[dependency-groups]
lint = [
    "pre-commit==4.6.0",
    "ruff==0.15.11",
]
dev = [
    "pytest==9.0.3",
]
